updated test method comments in `DuplicationTrajectoryUtilsTest` to use Given/When/Then structure